# django-shop

./: .gitignore  pyproject.toml
shop_project/: db.sqlite3
shop_project/shop_project/: settings.py  urls.py
shop_project/store/: admin.py  models.py  urls.py  views.py
shop_project/store/migrations/: 0001_initial.py  0002_productimage_alter_product_image.py  0003_remove_product_image_productimage_product.py  0004_alter_productimage_product.py  0005_product_cover.py
shop_project/templates/: base.html
shop_project/templates/store/: home.html  product-info.html
